--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html
-><html>
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Site CI/CD</title>
+  <meta charset="UTF-8">
+  <title>Site CI/CD</title>
 </head>
 <body>
-<h1> Déployé automatiquement avec GitHub Actions !</h1>
+  <h1>Déployé automatiquement avec GitHub Actions!</h1>
 </body>
 </html>
