Trigger: re-run workflows after making repo public

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Site CI/CD</title>
+  <!-- Trigger CI/CD after making repo public -->
 </head>
 <body>
   <h1>Déployé automatiquement avec GitHub Actions!</h1>
