--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 <body>
   <h1>Déployé automatiquement avec GitHub Actions!</h1>
 </body>
-</html>
+</html>"<!-- Trigger deployment on 05/12/2025 -->" 
