Fix: add UTF-8 encoding for HTML validation

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Site CI/CD</title>
-  <!-- Trigger CI/CD after making repo public -->
 </head>
 <body>
   <h1>Déployé automatiquement avec GitHub Actions!</h1>
 </body>
-</html>"<!-- Trigger deployment on 05/12/2025 -->" 
+</html>
