Test if Actions still blocked

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Site CI/CD</title>
+  <title>Site CI/CD</title> //commentaire 
 </head>
 <body>
   <h1>Déployé automatiquement avec GitHub Actions!</h1>
